Fixing message height to remove vertical shift

--- a/app/profile-settings/profile-settings.module.css
+++ b/app/profile-settings/profile-settings.module.css
@@ -4,7 +4,6 @@
   flex-direction: column;
   min-height: 100vh;
   font-family: Arial, sans-serif;
-  gap: 2rem;
   flex: 1;
 }
 
@@ -44,7 +43,6 @@
 /* section styles (to style each part of the profile page) */
 .sectionContent {
   margin: 0 4rem;
-  gap: 1.5rem;
   display: flex;
   flex-direction: column;
   color: #000;
@@ -74,14 +72,21 @@
   gap: 1rem;
 }
 
+.notificationSettingGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+
 
 /* editable account fields form */
 .accountForm {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
   margin: 0 4rem;
 }
+
 
 .accountFormGroup {
   display: flex;
@@ -130,6 +135,7 @@
 }
 
 .forgotPasswordLink {
+  margin-top: 1rem;
   color: #445B35;
   font-weight: 700;
   text-decoration: underline;
@@ -146,7 +152,6 @@
 }
 
 .saveButton {
-  margin-top: 1rem;
   padding: 0.75rem 2.5rem;
   background-color: #819A79;
   color: white;
@@ -167,7 +172,6 @@
 }
 
 .discardButton {
-  margin-top: 1rem;
   padding: 0.75rem 2.5rem;
   background-color: white;
   color: #445B35;
@@ -192,7 +196,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-top: 3rem;
+  margin-bottom: 1rem;
 }
 
 .logoutButton {
@@ -321,4 +325,8 @@
 .accountError {
   color: #B14343;
   font-weight: 700;
+}
+
+.messageContainer {
+  height: 4rem;
 }
